2020-10-07
	Agregar Termógrafo en Estiba
	Crear entidad Contenedor y relacionarlo en Inspeccion

2020-09-22 
	Actualización war
	Avance Pescarolo formato 2 de PDF

2020-09-17 
	Cambiar checks por combo enum en inspección

2020-09-16 
	Formulario Inspeccion y selección de tipo de contenedor

2020-09-15 
	Ordenar por código en Plantilla Contenedor Seco
	Ordenar por código en Plantilla Contenedor Refrigerado

2020-07-16 
	Cambiar Collection a ElementList en formularios
	Ampliar tamano descripción en plantillas

2020-07-07 
	Plantilla de formulario Reefer
	Grabar nulo en los títulos de SecoDetalle
2020-07-04 
	Reemplazo de OneToMany por ElementCollection Cont. Seco

2020-06-24 
	Restricción para aplicar cumplimiento en títulos en Saco

2020-06-23 
	Plantilla Seco 
	Tabla Naviera y Cliente (renombrar de Exportador)
	RestringirUnSoloRegistro para Reefer y Seco

2020-06-19	
	Item 
	ReeferP
	ReeferPDetalle 

2020-06-18
	Generación del entorno
	Reefer.groovy
	Contenedor
	Exportador
	Lugar
	Naviera