@@ -1,3 +1,8 @@
 DELETE FROM contenedor.inspeccion_detalle1;
 DELETE FROM contenedor.inspeccion_detalle;
 DELETE FROM contenedor.inspeccion;
+
+DELETE FROM contenedor.selloscierrecontenedor_detalle3;
+DELETE FROM contenedor.selloscierrecontenedor_detalle2;
+DELETE FROM contenedor.selloscierrecontenedor_detalle1;
+DELETE FROM contenedor.selloscierrecontenedor;
