@@ -39,3 +39,5 @@ fechaSel=Fecha de sellado
 horaSel=Hora de sellado
 fechaRup=Fecha de ruptura
 horaRup=Hora de ruptura
+
+SellosCierreContenedor=Sellos colocados al cierre del contenedor
