@@ -1,3 +1,7 @@
+2020-10-08
+	SellosCierreContenedorTest
+	SellosCierreContenedor
+
 2020-10-07
 	Agregar Termógrafo en Estiba
 	Crear entidad Contenedor y relacionarlo en Inspeccion
